Authentication and Authenrization, CheckOut